--- a/src/html/header.html
+++ b/src/html/header.html
@@ -25,10 +25,10 @@
             <div class="contacts__body">
                 <ul class="contacts__list">
                     <li class="contacts__item">
-                        <a class="contacts__link" href="#">Нижний Новгород</a>
+                        <a class="contacts__link" href="#"><span>Нижний Новгород</span></a>
                     </li>
                     <li class="contacts__item">
-                        <a class="contacts__link" href="#">8 800 950-33-98</a>
+                        <a class="contacts__link contacts__link-phone" href="#">8 800 950-33-98</a>
                     </li>
                     <li class="contacts__item">
                         <a class="contacts__link" href="#">Войти</a>
