Начинаю адаптив шапки

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,39 +1,44 @@
 <header class="header">
     <div class="header__container">
-        <a class="header__logo" href="#">
-            <img src="img/header/logo.svg" alt="logo">
-        </a>
-        <div class="header__menu menu">
-            <nav class="menu__body">
-                <ul class="menu__list">
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Все курсы</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Мероприятия</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Базы знаний</a>
-                    </li>
-                    <li class="menu__item">
-                        <a class="menu__link" href="#">Карьера</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="header__contacts contacts">
-            <div class="contacts__body">
-                <ul class="contacts__list">
-                    <li class="contacts__item">
-                        <a class="contacts__link contacts__link--location" href="#">Нижний Новгород</a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link contacts__link--phone" href="tel:88009503398">8 800 950-33-98</a>
-                    </li>
-                    <li class="contacts__item">
-                        <a class="contacts__link" href="#">Войти</a>
-                    </li>
-                </ul>
+        <div class="header__body">
+            <a class="header__logo" href="#">
+                <img src="img/header/logo.svg" alt="logo">
+            </a>
+            <div class="header__burger">
+                <span></span>
+            </div>
+            <div class="header__menu menu">
+                <nav class="menu__body">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Все курсы</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Мероприятия</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Базы знаний</a>
+                        </li>
+                        <li class="menu__item">
+                            <a class="menu__link" href="#">Карьера</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__contacts contacts">
+                <div class="contacts__body">
+                    <ul class="contacts__list">
+                        <li class="contacts__item">
+                            <a class="contacts__link contacts__link--location" href="#">Нижний Новгород</a>
+                        </li>
+                        <li class="contacts__item">
+                            <a class="contacts__link contacts__link--phone" href="tel:88009503398">8 800 950-33-98</a>
+                        </li>
+                        <li class="contacts__item">
+                            <a class="contacts__link" href="#">Войти</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
