--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,10 @@
                         <div class="banner__item--1"></div>
                         <div class="banner__item--2"></div>
                         <div class="banner__item--3"></div>
+                        <div class="banner__item--4"></div>
+                        <div class="banner__item--5"></div>
+                        <div class="banner__item--6"></div>
+                        <div class="banner__item--7"></div>
                     </div>
                 </div>
             </div>
