Начинаю верстать section targets

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/head.html',{
-"title":"КШ"
+"title":"Chess"
 })
 <body>
 <div class="wrapper">
@@ -37,63 +37,8 @@
                 </div>
             </div>
         </section>
-        <section class="target">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo omnis rem,
-                ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis reprehenderit
-                unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis labore nemo
-                omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae reiciendis
-                reprehenderit unde! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut commodi enim facilis
-                labore nemo omnis rem, ullam. Dolor dolore earum id maxime molestiae, neque, nisi placeat recusandae
-                reiciendis reprehenderit unde!</p>
+        <section class="targets">
+
         </section>
     </main>
     @@include('html/footer.html',{})
