--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,27 @@
             </div>
         </section>
         <section class="targets">
-
+            <div class="targets__container">
+                <div class="targets__body">
+                    <div class="targets__item targets__item_1"></div>
+                    <div class="targets__item targets__item_2">
+                        <div class="targets__title">Цель 1</div>
+                        <div class="targets__desc">Привить любовь и интерес к шахматам</div>
+                    </div>
+                    <div class="targets__item targets__item_3">
+                        <div class="targets__title">Цель 2</div>
+                        <div class="targets__desc">Получить удовольствие от процесса игры, от факта победы в партии, от спасения</div>
+                    </div>
+                    <div class="targets__item targets__item_4">
+                        <div class="targets__title">Цель 3</div>
+                        <div class="targets__desc">Научить анализировать свои и чужие ошибки, учиться на них с помощью GM мирового уровня</div>
+                    </div>
+                    <div class="targets__item targets__item_5">
+                        <div class="targets__title">Цель 4</div>
+                        <div class="targets__desc">Получить удовольствие от процесса игры, от факта победы в партии, от спасения</div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     @@include('html/footer.html',{})
