--- a/src/index.html
+++ b/src/index.html
@@ -71,8 +71,7 @@
                 </div>
                 <div class="targets__video video">
                     <div class="video__body">
-                        <video class="video__file"
-                               controls
+                        <video controls
                                preload="metadata"
                                poster="img/section-targets/poster.jpg">
                             <source src="files/chess.webm" type="video/webm">
