Делаю вставку видео 171022_13:55

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="targets">
             <div class="targets__container">
-                <div class="targets__body">
+                <div class="targets__listing">
                     <div class="targets__item targets__item_1">
                         <div class="targets__message">
                             Вы полюбите шахматы, и вам этого будет не хватать всегда!
