Продолжаю section targets 181022_14:21

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,26 @@
                     развивает творческие способности, вырабатывает стрессоустойчивость, терпение, помогает
                     сосредоточиться, а так же помогает осознать последствия своих действий.
                 </div>
+                <div class="targets__benefits benefits">
+                    <div class="benefits__item benefits__item--1">
+                        Интересные уроки по шахматам
+                    </div>
+                    <div class="benefits__item benefits__item--2">
+                        Шахматы для взрослых и детей
+                    </div>
+                    <div class="benefits__item benefits__item--3">
+                        Обучение шахмат онлайн
+                    </div>
+                    <div class="benefits__item benefits__item--4">
+                        Профессиональное обучение шахматам
+                    </div>
+                    <div class="benefits__item benefits__item--5">
+                        Шахматные турниры
+                    </div>
+                    <div class="benefits__item benefits__item--6">
+                        Сеанс одновременной игры с GM
+                    </div>
+                </div>
             </div>
         </section>
     </main>
