Закончил section features 191022_13:06

--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,7 @@
         </section>
         <section class="features">
             <div class="features__container">
+                <div class="features__sqr"></div>
                 <div class="features__body">
                     <div class="features__item">Шахматы могут помочь вам планировать наперед, не торопиться с решениями
                         и взвешивать их плюсы и минусы.
