Начинаю section content 191022_16:06

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,12 @@
                     <div class="banner__info">
                         <h1 class="banner__title">Шахматная школа</h1>
                         <div class="banner__desc">Развитие мышления и логики</div>
-                        <div class="banner__conditions">
-                            <div class="banner__duration">Срок обучения:<br>5 лет</div>
-                            <div class="banner__mode">Режим занятий:<br>2 раза в неделю по 2 академических часа</div>
+                        <div class="banner__conditions conditions">
+                            <div class="conditions__duration">Срок обучения:<br>5 лет</div>
+                            <div class="conditions__mode">Режим занятий:<br>2 раза в неделю по 2 академических часа
+                            </div>
                         </div>
-                        <div class="banner__cost">
+                        <div class="banner__cost cost">
                             <span>от 4 350 ₽ в месяц</span>
                         </div>
                         <div class="banner__bonus">1 занятие бесплатно</div>
@@ -125,6 +126,11 @@
                 <div class="features__action">
                     <button class="button">Записаться на курс</button>
                 </div>
+            </div>
+        </section>
+        <section class="content">
+            <div class="content__container">
+
             </div>
         </section>
     </main>
