Продолжаю section content 201022_11:05

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,23 @@
         </section>
         <section class="content">
             <div class="content__container">
-
+                <div class="content__body">
+                    <div class="content__title-section title-section">Chess academy для школьников</div>
+                    <div class="content__desc-section desc-section">Обеспечиваем индивидуальный подход к учащимся. В основе процесса обучения - тесное и открытое взаимодействие педагога и ученика. Обучение проходит по программе, созданной GM.</div>
+                    <!--<div class="content__row">
+                        <div class="content__info">
+                            <div class="content__conditions conditions">
+                                <div class="conditions__duration">Срок обучения:<br>5 лет</div>
+                                <div class="conditions__mode">Режим занятий:<br>2 раза в неделю по 2 академических часа
+                                </div>
+                            </div>
+                            <div class="content__cost cost">
+                                <span>от 4 350 ₽ в месяц</span>
+                            </div>
+                        </div>
+                        <div class="content__image"></div>
+                    </div>-->
+                </div>
             </div>
         </section>
     </main>
