--- a/src/index.html
+++ b/src/index.html
@@ -174,12 +174,12 @@
                                 </div>
                             </div>
                             <!-- Добавляем, если нужна пагинация -->
-                            <!--<div class="swiper-pagination"></div>-->
+                            <div class="swiper-pagination"></div>
                             <!-- Добавляем, если нужны стрелки управления -->
-                            <!--<div class="swiper-button-prev"></div>-->
-                            <!--<div class="swiper-button-next"></div>-->
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
                             <!-- Добавляем, если нужна полоса прокрутки -->
-                            <!--<div class="swiper-scrollbar"></div>-->
+                            <div class="swiper-scrollbar"></div>
                         </div>
                     </div>
                     <!--<div class="content__row">
