--- a/src/index.html
+++ b/src/index.html
@@ -202,5 +202,6 @@
     @@include('html/footer.html',{})
 </div>
 <script src="js/app.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>-->
 </body>
 </html>
