--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,23 @@
                         проходит по программе, созданной GM.
                     </div>
                     <div class="content__slider">
-
+                        <!-- Slider main container -->
+                        <div class="slider swiper">
+                            <!-- Additional required wrapper -->
+                            <div class="slider__wrapper swiper-wrapper">
+                                <!-- Slides -->
+                                <div class="slider__slide swiper-slide">Slide 1</div>
+                                <div class="slider__slide swiper-slide">Slide 2</div>
+                                <div class="slider__slide swiper-slide">Slide 3</div>
+                            </div>
+                            <!-- If we need pagination -->
+                            <!--<div class="swiper-pagination"></div>-->
+                            <!-- If we need navigation buttons -->
+                            <!--<div class="swiper-button-prev"></div>-->
+                            <!--<div class="swiper-button-next"></div>-->
+                            <!-- If we need scrollbar -->
+                            <!--<div class="swiper-scrollbar"></div>-->
+                        </div>
                     </div>
                     <!--<div class="content__row">
                         <div class="content__info">
