Делаю вторую сову 211022_23:30

--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,15 @@
                             </div>
                             <button class="button">Записаться на курс</button>
                         </div>
-                        <div class="content__image"></div>
+                        <div class="content__image image-content">
+                            <span>1 занятие бесплатное</span>
+                            <div class="image-content__message">
+                                <img src="img/section-course/svg/message.svg" alt="owl-2">
+                            </div>
+                            <div class="image-content__owl">
+                                <img src="img/section-course/owl.png" alt="owl-2">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
