Делаю вторую сову 221022_13:05

--- a/src/index.html
+++ b/src/index.html
@@ -174,13 +174,29 @@
                         </div>
                     </div>
                     <h2 class="content__title-section title-section">Содержание курса</h2>
-                    <p class="content__desc-section desc-section">Программа включает в себя изучение истории
-                        возникновения игры в шахматы, современные тенденции игры в онлайн-шахматы, знакомство со
-                        знаменитыми шахматистами прошлого и настоящего. Дети знакомятся с фигурами и правилами игры,
-                        узнают основные понятия, отрабатывая все в игровой практике. Дебют, мителльшпиль, эндшпиль,
-                        стратегия и тактика игры, особенности позиции – все это включено в первый год обучения, а
-                        пятилетний курс предполагает обучение ребенка до уровня КМС.
-                    </p>
+                    <div class="content__desc-section">
+                        <p class="content__desc-info desc-section">Программа включает в себя изучение истории
+                            возникновения игры в шахматы, современные тенденции игры в онлайн-шахматы, знакомство со
+                            знаменитыми шахматистами прошлого и настоящего. Дети знакомятся с фигурами и правилами игры,
+                            узнают основные понятия, отрабатывая все в игровой практике. Дебют, мителльшпиль, эндшпиль,
+                            стратегия и тактика игры, особенности позиции – все это включено в первый год обучения, а
+                            пятилетний курс предполагает обучение ребенка до уровня КМС.
+                        </p>
+                        <div class="content__desc-image">
+                            <div class="content__desc-image_1">
+                                <img src="img/section-course/svg/chess-1.svg" alt="chess-1">
+                            </div>
+                            <div class="content__desc-image_2">
+                                <img src="img/section-course/svg/chess-2.svg" alt="chess-2">
+                            </div>
+                            <div class="content__desc-image_3">
+                                <img src="img/section-course/svg/chess-3.svg" alt="chess-3">
+                            </div>
+                            <div class="content__desc-image_4">
+                                <img src="img/section-course/svg/chess-4.svg" alt="chess-4">
+                            </div>
+                        </div>
+                    </div>
                     <div class="content__row">
                         <div class="content__info">
                             <div class="content__conditions conditions">
@@ -201,6 +217,18 @@
                             <div class="image-content__owl">
                                 <img src="img/section-course/owl.png" alt="owl-2">
                             </div>
+                            <!--<div class="image-content__chess image-content__chess_1">
+                                <img src="img/section-course/svg/chess-1.svg" alt="chess-1">
+                            </div>
+                            <div class="image-content__chess image-content__chess_2">
+                                <img src="img/section-course/svg/chess-2.svg" alt="chess-2">
+                            </div>
+                            <div class="image-content__chess image-content__chess_3">
+                                <img src="img/section-course/svg/chess-3.svg" alt="chess-3">
+                            </div>
+                            <div class="image-content__chess image-content__chess_4">
+                                <img src="img/section-course/svg/chess-4.svg" alt="chess-4">
+                            </div>-->
                         </div>
                     </div>
                 </div>
