Продолжаю делать вторую сову 241022_16:24

--- a/src/index.html
+++ b/src/index.html
@@ -238,6 +238,13 @@
                 </div>
             </div>
         </section>
+        <section class="educator">
+            <div class="educator__container">
+                <div class="educator__body">
+
+                </div>
+            </div>
+        </section>
     </main>
     @@include('html/footer.html',{})
 </div>
