Продолжаю делать вторую сову 251022_08:52

--- a/src/index.html
+++ b/src/index.html
@@ -214,25 +214,15 @@
                             <button class="button">Записаться на курс</button>
                         </div>
                         <div class="content__image image-content">
-                            <span>1 занятие бесплатно</span>
-                            <div class="image-content__message">
-                                <img src="img/section-course/svg/message.svg" alt="owl-2">
+                            <div class="image-content__body">
+                                <div class="image-content__info">1 занятие бесплатно</div>
+                                <div class="image-content__message">
+                                    <img src="img/section-course/svg/message.svg" alt="message">
+                                </div>
+                                <div class="image-content__owl">
+                                    <img src="img/section-course/owl.png" alt="owl-2">
+                                </div>
                             </div>
-                            <div class="image-content__owl">
-                                <img src="img/section-course/owl.png" alt="owl-2">
-                            </div>
-                            <!--<div class="image-content__chess image-content__chess_1">
-                                <img src="img/section-course/svg/chess-1.svg" alt="chess-1">
-                            </div>
-                            <div class="image-content__chess image-content__chess_2">
-                                <img src="img/section-course/svg/chess-2.svg" alt="chess-2">
-                            </div>
-                            <div class="image-content__chess image-content__chess_3">
-                                <img src="img/section-course/svg/chess-3.svg" alt="chess-3">
-                            </div>
-                            <div class="image-content__chess image-content__chess_4">
-                                <img src="img/section-course/svg/chess-4.svg" alt="chess-4">
-                            </div>-->
                         </div>
                     </div>
                 </div>
