Делаю section educator 281022_15:49

--- a/src/index.html
+++ b/src/index.html
@@ -230,8 +230,63 @@
         </section>
         <section class="educator">
             <div class="educator__container">
-                <div class="educator__body">
-
+                <h2 class="educator__title">Наши преподаватели</h2>
+                <div class="educator__items">
+                    <div class="educator__column">
+                        <div class="educator__item item-educator">
+                            <div class="item-educator__photo">
+                                <div class="item-educator__elem"></div>
+                                <div class="item-educator__image">
+                                    <img src="img/section-educator/photo-1.jpg" alt="photo-1">
+                                </div>
+                            </div>
+                            <div class="item-educator__name">Жанет Пелосси</div>
+                            <div class="item-educator__desc">Выпускница Гарвардского Университета</div>
+                        </div>
+                    </div>
+                    <div class="educator__column">
+                        <div class="educator__item item-educator">
+                            <div class="item-educator__photo">
+                                <div class="item-educator__elem"></div>
+                                <div class="item-educator__image">
+                                    <img src="img/section-educator/photo-2.jpg" alt="photo-2">
+                                </div>
+                            </div>
+                            <div class="item-educator__name">Ольга Русакова</div>
+                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
+                                шахматы и участвует в турнирах.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="educator__column">
+                        <div class="educator__item item-educator">
+                            <div class="item-educator__photo">
+                                <div class="item-educator__elem"></div>
+                                <div class="item-educator__image">
+                                    <img src="img/section-educator/photo-3.jpg" alt="photo-3">
+                                </div>
+                            </div>
+                            <div class="item-educator__name">Михаил Бернс</div>
+                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
+                                шахматы и участвует в турнирах. Выпускница Гарвардского Университета. Более 10 лет играет в
+                                шахматы и участвует в турнирах.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="educator__column">
+                        <div class="educator__item item-educator">
+                            <div class="item-educator__photo">
+                                <div class="item-educator__elem"></div>
+                                <div class="item-educator__image">
+                                    <img src="img/section-educator/photo-4.jpg" alt="photo-4">
+                                </div>
+                            </div>
+                            <div class="item-educator__name">Вадим Волков</div>
+                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
+                                шахматы и участвует в турнирах.
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
