Делаю section educator 281022_16:00

--- a/src/index.html
+++ b/src/index.html
@@ -268,7 +268,8 @@
                             </div>
                             <div class="item-educator__name">Михаил Бернс</div>
                             <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
-                                шахматы и участвует в турнирах. Выпускница Гарвардского Университета. Более 10 лет играет в
+                                шахматы и участвует в турнирах. Выпускница Гарвардского Университета. Более 10 лет
+                                играет в
                                 шахматы и участвует в турнирах.
                             </div>
                         </div>
