Делаю section educator 281022_16:11

--- a/src/index.html
+++ b/src/index.html
@@ -240,8 +240,10 @@
                                     <img src="img/section-educator/photo-1.jpg" alt="photo-1">
                                 </div>
                             </div>
-                            <div class="item-educator__name">Жанет Пелосси</div>
-                            <div class="item-educator__desc">Выпускница Гарвардского Университета</div>
+                            <div class="item-educator__name">Молотилова Ольга</div>
+                            <div class="item-educator__desc">Многократная чемпионка по шахматам. Кандидат в мастера
+                                спорта по шахматам, 2010 г.
+                            </div>
                         </div>
                     </div>
                     <div class="educator__column">
@@ -252,9 +254,9 @@
                                     <img src="img/section-educator/photo-2.jpg" alt="photo-2">
                                 </div>
                             </div>
-                            <div class="item-educator__name">Ольга Русакова</div>
-                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
-                                шахматы и участвует в турнирах.
+                            <div class="item-educator__name">Сташис Анна</div>
+                            <div class="item-educator__desc">Неоднократный победитель и призер первенств Беларуси среди
+                                девушек
                             </div>
                         </div>
                     </div>
@@ -267,10 +269,8 @@
                                 </div>
                             </div>
                             <div class="item-educator__name">Михаил Бернс</div>
-                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
-                                шахматы и участвует в турнирах. Выпускница Гарвардского Университета. Более 10 лет
-                                играет в
-                                шахматы и участвует в турнирах.
+                            <div class="item-educator__desc">Многократный призёр и чемпион РБ по шахматам, а также
+                                различных международных соревнований.
                             </div>
                         </div>
                     </div>
@@ -283,7 +283,7 @@
                                 </div>
                             </div>
                             <div class="item-educator__name">Вадим Волков</div>
-                            <div class="item-educator__desc">Выпускница Гарвардского Университета. Более 10 лет играет в
+                            <div class="item-educator__desc">Выпускник Гарвардского Университета. Более 10 лет играет в
                                 шахматы и участвует в турнирах.
                             </div>
                         </div>
