Начал делать форму 041122_17:24

--- a/src/index.html
+++ b/src/index.html
@@ -317,7 +317,7 @@
                                 sem id sem.
                             </div>
                         </div>
-                        <div class="faq__gradient"></div>
+                        <div class="faq__gradient gradient"></div>
                     </div>
                     <div class="faq__item">
                         <div class="faq__content">
@@ -332,7 +332,7 @@
                                 sem id sem.
                             </div>
                         </div>
-                        <div class="faq__gradient"></div>
+                        <div class="faq__gradient gradient"></div>
                     </div>
                     <div class="faq__item">
                         <div class="faq__content">
@@ -347,7 +347,7 @@
                                 sem id sem.
                             </div>
                         </div>
-                        <div class="faq__gradient"></div>
+                        <div class="faq__gradient gradient"></div>
                     </div>
                     <div class="faq__item">
                         <div class="faq__content">
@@ -362,11 +362,32 @@
                                 sem id sem.
                             </div>
                         </div>
-                        <div class="faq__gradient"></div>
+                        <div class="faq__gradient gradient"></div>
                     </div>
                     <div class="faq__elements faq__elements_1"></div>
                     <div class="faq__elements faq__elements_2"></div>
                     <div class="faq__elements faq__elements_3"></div>
+                </div>
+            </div>
+        </section>
+        <section class="form-section">
+            <div class="form-section__container">
+                <div class="form-section__wrapper">
+                    <div class="form-section__body">
+                        <div class="form-section__left">
+                            <div class="form-section__image">
+                                <div class="form-section__image-text image-text">
+                                    <div class="image-text__title">Запись на курс уже открыта</div>
+                                    <div class="image-text__subtitle">Оставьте заявку и наши специалисты свяжутся с
+                                        вами, ответят на все вопросы и зарегистрируют вас на обучение
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-section__right">
+                            Right
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
