--- a/src/index.html
+++ b/src/index.html
@@ -388,18 +388,20 @@
                             <div class="form">
                                 <form action="#" id="form" class="form__body">
                                     <div class="form__item">
-                                        <label for="formName" class="form__label">Ваше имя *</label>
-                                        <input id="formName" type="text" name="name" class="form__input">
+                                        <label for="formName" class="form__label"></label>
+                                        <input id="formName" type="text" name="name" class="form__input"
+                                               placeholder="Ваше имя *">
                                     </div>
                                     <div class="form__item">
-                                        <label for="formPhone" class="form__label">Ваш телефон *</label>
+                                        <label for="formPhone" class="form__label"></label>
                                         <input id="formPhone" type="tel" name="phone" class="form__input"
-                                               placeholder="+375 44 565-09-62"
+                                               placeholder="Ваш телефон *"
                                                pattern="+375 [0-9]{2} [0-9]{3}-[0-9]{2}-[0-9]{2}">
                                     </div>
                                     <div class="form__item">
-                                        <label for="formEmail" class="form__label">Ваш email *</label>
-                                        <input id="formEmail" type="email" name="email" class="form__input">
+                                        <label for="formEmail" class="form__label"></label>
+                                        <input id="formEmail" type="email" name="email" class="form__input"
+                                               placeholder="Ваш email *">
                                     </div>
                                     <div class="form__info">Нажимая на кнопку, я соглашаюсь на обработку персональных
                                         данных и с правилами пользования Платформой
