--- a/src/index.html
+++ b/src/index.html
@@ -406,7 +406,9 @@
                                     <div class="form__info">Нажимая на кнопку, я соглашаюсь на обработку персональных
                                         данных и с правилами пользования Платформой
                                     </div>
-                                    <button class="form__button" type="submit">Отправить</button>
+                                    <div class="form__button-wrapper">
+                                        <button class="form__button" type="submit">Отправить</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
