--- a/src/index.html
+++ b/src/index.html
@@ -389,18 +389,17 @@
                                 <form action="#" id="form" class="form__body">
                                     <div class="form__item">
                                         <label for="formName" class="form__label"></label>
-                                        <input id="formName" type="text" name="name" class="form__input"
+                                        <input id="formName" type="text" name="name" class="form__input _req"
                                                placeholder="Ваше имя *">
                                     </div>
                                     <div class="form__item">
                                         <label for="formPhone" class="form__label"></label>
-                                        <input id="formPhone" type="tel" name="phone" class="form__input"
-                                               placeholder="Ваш телефон *"
-                                               pattern="+375 [0-9]{2} [0-9]{3}-[0-9]{2}-[0-9]{2}">
+                                        <input id="formPhone" type="text" name="phone" class="form__input _req"
+                                               placeholder="Ваш телефон *">
                                     </div>
                                     <div class="form__item">
                                         <label for="formEmail" class="form__label"></label>
-                                        <input id="formEmail" type="email" name="email" class="form__input"
+                                        <input id="formEmail" type="text" name="email" class="form__input _req _email"
                                                placeholder="Ваш email *">
                                     </div>
                                     <div class="form__info">Нажимая на кнопку, я соглашаюсь на обработку персональных
