--- a/src/index.html
+++ b/src/index.html
@@ -388,19 +388,19 @@
                             <div class="form">
                                 <form action="#" id="form" class="form__body">
                                     <div class="form__item">
-                                        <label for="formName" class="form__label"></label>
                                         <input id="formName" type="text" name="name" class="form__input _req"
-                                               placeholder="Ваше имя *">
+                                               placeholder=" " autocomplete="off" required="true">
+                                        <label for="formName" class="form__label">Ваше имя <span>*</span></label>
                                     </div>
                                     <div class="form__item">
-                                        <label for="formPhone" class="form__label"></label>
                                         <input id="formPhone" type="text" name="phone" class="form__input _req"
-                                               placeholder="Ваш телефон *">
+                                               placeholder=" " autocomplete="off" required="true">
+                                        <label for="formPhone" class="form__label">Ваш телефон <span>*</span></label>
                                     </div>
                                     <div class="form__item">
-                                        <label for="formEmail" class="form__label"></label>
                                         <input id="formEmail" type="text" name="email" class="form__input _req _email"
-                                               placeholder="Ваш email *">
+                                               placeholder=" " autocomplete="off" required="true">
+                                        <label for="formEmail" class="form__label">Ваш email <span>*</span></label>
                                     </div>
                                     <div class="form__info">Нажимая на кнопку, я соглашаюсь на обработку персональных
                                         данных и с правилами пользования Платформой
